overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,10 @@ input:focus::placeholder {
 }
 /*Shrinking for mobile*/
 @media (max-width: 768px) {
+  #app{
+    overflow-x: hidden;
+  }
+
   .waves {
     height:40px;
     min-height:40px;
@@ -149,7 +153,7 @@ input:focus::placeholder {
     top: 5vh;
     right: 10vw;
   }
-  
+
 }
 
 .empty, .start{
